# Modules/Item/Routes/api.php
@@ -38,4 +38,9 @@ Route::get('items/brand/{brand_id}', 'ItemController@getItemByBrand');
 Route::put('items/attribute/{item_id}', 'ItemController@updateItemAttribute');
 Route::post('items/{item_id}/upload', 'ItemController@uploadFile');
 Route::delete('items/image/{image_id}/delete', 'ItemController@destroyImage');
+
+/**
+ * Frontend Routes
+ */
 Route::get('get-items', 'ItemController@getProductList');
+Route::get('get-category-products/{no}', 'CategoryController@getCategoryByProductForHomePage');
